feat: add redeem
